--- a/Book Discovery/BookDetail/Views/BookPricesTableViewCell.xib
+++ b/Book Discovery/BookDetail/Views/BookPricesTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookPricesTableViewCell" rowHeight="70" id="KGk-i7-Jjw" customClass="BookPricesTableViewCell" customModule="Book_Discovery" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BookPricesTableViewCell" rowHeight="70" id="KGk-i7-Jjw" customClass="BookPricesTableViewCell" customModule="Book_Discovery" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="407" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -45,6 +45,9 @@
                         <state key="normal">
                             <imageReference key="image" image="arrow.up.forward.square.fill" catalog="system" symbolScale="large"/>
                         </state>
+                        <connections>
+                            <action selector="navigateToSite:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="K5b-7V-616"/>
+                        </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHj-uE-3yG">
                         <rect key="frame" x="310" y="23" width="39" height="20.5"/>
