--- a/Book Discovery/BookResults/Views/BookResultsTableViewCell.xib
+++ b/Book Discovery/BookResults/Views/BookResultsTableViewCell.xib
@@ -15,8 +15,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="334" height="137"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VMv-aq-eeq">
-                        <rect key="frame" x="8" y="20" width="65" height="101"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VMv-aq-eeq">
+                        <rect key="frame" x="8" y="21.666666666666664" width="65" height="98.333333333333343"/>
                         <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="65" id="4YY-eq-rQS"/>
@@ -86,6 +86,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="book.fill" catalog="system" width="128" height="102"/>
         <image name="heart" catalog="system" width="128" height="109"/>
     </resources>
 </document>
